--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "canvas": "^2.8.0",
+    "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^3.8.1",
     "gatsby-plugin-sass": "^4.8.0",
     "gatsby-source-filesystem": "^3.9.0",
