--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -26,6 +27,7 @@
     "gatsby": "^3.8.1",
     "gatsby-plugin-sass": "^4.8.0",
     "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-source-graphql": "^3.9.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
